--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "mysql": "*",
-    "node-static": "*"
+    "node-static": "*",
+    "faye": "*"
   }
 }
